# pyfsm

./: README.md  pyproject.toml
pyautomaton/: automaton.py
pyfsm/: automaton.py
tests/: automaton_test.py
