[tool.poetry]
name = "pyfsm"
version = "0.2.0"
description = ""
authors = ["cirius1792 <cirolucio.tecce@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"


[tool.poetry.group.test.dependencies]
pytest = "^7.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
